enhance idea with JBR17